# anthropic-text-editor

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: editor.rs  main.rs  tests.rs
